examples/pos/infer/infer4.effekt
def foo[A](): A = <>


def bar() =
  (if (true) foo() else foo()) + 1

def main() = ()