examples/neg/namer/types/function-as-paren-param.effekt
def bar(f: (Int, Int) => Bool) = <>
